# observability

./: .gitignore  .npmrc  .prettierignore  .prettierrc.json  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.changeset/: README.md  SMOODEV-1128-sync-token-mint.md  SMOODEV-1148-node-webhook-transport.md  SMOODEV-1156-multilang-scaffold.md  SMOODEV-1206-token-provider.md  bootstrap-entry.md  browser-capture-handlers.md  config.json  drop-unused-tsup-devdep.md  fix-node-genai-exports.md  initial-release.md  otlp-logs-signal.md  session-scoped-sampling.md  smoodev-1067-node-handlers.md  smoodev-1067c-otel-foundation.md  smoodev-1067d-otel-native-client.md  web-vitals-rum.md
.github/workflows/: build-api-prime.yml  build-desktop.yml  build-hot-path.yml  ci.yml  pr-checks.yml  publish.yml  release.yml
desktop/: .gitignore  Cargo.toml  Dioxus.toml  README.md
desktop/.cargo/: config.toml
desktop/assets/: styles.css
desktop/crates/observability-studio-app/: Cargo.toml
desktop/crates/observability-studio-app/src/: lib.rs  main.rs  persistence.rs  state.rs
desktop/crates/observability-studio-app/src/components/: icons.rs  kpi.rs  mod.rs  nav_rail.rs  palette.rs  stack_frame.rs  status_bar.rs  time_range.rs
desktop/crates/observability-studio-app/src/views/: errors_view.rs  logs_view.rs  metrics_view.rs  mod.rs  settings_dialog.rs  welcome.rs
desktop/crates/observability-studio-client/: Cargo.toml
desktop/crates/observability-studio-client/src/: auth.rs  lib.rs
desktop/crates/observability-studio-client/src/api/: errors.rs  logs.rs  metrics.rs  mod.rs
desktop/crates/observability-studio-theme/: Cargo.toml
desktop/crates/observability-studio-theme/src/: lib.rs
desktop/scripts/: bundle-linux.sh  bundle-macos.sh  bundle-windows.ps1
dotnet/: .gitignore  README.md  SmooAI.Observability.sln
dotnet/src/SmooAI.Observability/: Bootstrap.cs  Client.cs  Events.cs  ObservabilityJson.cs  Pii.cs  README.md  Scope.cs  SmooAI.Observability.csproj  StackParser.cs  Transport.cs
dotnet/src/SmooAI.Observability/AspNetCore/: SmooObservabilityMiddleware.cs
dotnet/src/SmooAI.Observability/Auth/: TokenProvider.cs
dotnet/src/SmooAI.Observability/GenAI/: GenAIAttributes.cs
dotnet/src/SmooAI.Observability/Metrics/: MetricsClient.cs
dotnet/src/SmooAI.Observability/Otel/: AuthHeaderHandler.cs  LoggingExtensions.cs  (+2 more)
dotnet/tests/SmooAI.Observability.Tests/: BootstrapTests.cs  ClientTests.cs  GenAITests.cs  LoopbackServer.cs  MetricsTests.cs  MiddlewareTests.cs  OtelInstrumentationTests.cs  OtelLoggingTests.cs  OtelSetupTests.cs  PiiTests.cs  ScopeTests.cs  SmooAI.Observability.Tests.csproj  StackParserTests.cs  StubHttpMessageHandler.cs  TokenProviderTests.cs  TransportTests.cs
go/: README.md  bootstrap.go  bootstrap_test.go  client.go  client_test.go  genai.go  go.mod  go.sum  logs.go  logs_test.go  metrics.go  middleware.go  middleware_test.go  otel.go  otel_capture.go  otel_test.go  pii.go  pii_test.go  scope.go  scope_test.go  stack.go  token_provider.go  token_provider_test.go  transport.go  transport_test.go  types.go
go/fiber/: go.mod  go.sum  middleware.go  middleware_test.go
go/gin/: go.mod  go.sum  middleware.go  middleware_test.go
parity/: README.md  generate-corpus.mjs  sampling-corpus.json
python/: .gitignore  README.md  pyproject.toml
python/src/smooai_observability/: __init__.py  client.py  gen_ai_attributes.py  pii.py  scope.py  stack_parser.py  transport.py  types.py
python/src/smooai_observability/auth/: __init__.py  token_provider.py
python/src/smooai_observability/bootstrap/: __init__.py
python/src/smooai_observability/integrations/: fastapi.py  langchain.py
python/src/smooai_observability/metrics/: __init__.py
python/src/smooai_observability/otel/: __init__.py  auth_injecting_exporter.py  capture.py  setup_otel_sdk.py
python/tests/: conftest.py  test_bootstrap.py  test_client.py  test_fastapi.py  test_gen_ai.py  test_langchain.py  test_metrics.py  test_otel.py  test_otel_logs.py  test_pii.py  test_scope.py  test_stack_parser.py  test_token_provider.py  test_transport.py  test_types.py
rust/: Cargo.toml  README.md
rust/api-prime/: Cargo.toml  Dockerfile  README.md
rust/api-prime/src/: cache.rs  lib.rs  state.rs
rust/api-prime/src/controller/: admin.rs  internal.rs  manifest_loader.rs  mod.rs  pubsub.rs  reconcile.rs  sst_outputs.rs  types.rs
rust/api-prime/src/edge/: auth.rs  cache.rs  ctx.rs  debug.rs  dispatcher.rs  edge_attest.rs  implement.rs  mod.rs  proxy.rs  pubsub.rs  ratelimit.rs  route_table.rs  schema.rs  types.rs
rust/api-prime/src/handlers/: auth.rs  health.rs
rust/api-prime/tests/: integration_auth.rs  integration_profile.rs
rust/hot-path/: Cargo.toml  Dockerfile  README.md
rust/hot-path/src/: cache.rs  db.rs  error.rs  lib.rs  main.rs  product_constants.rs  state.rs
rust/hot-path/src/auth/: jwt.rs
rust/hot-path/src/handlers/: auth.rs  mod.rs  organization_features.rs  organization_products.rs  organizations.rs  profile.rs
rust/hot-path/tests/: integration_auth.rs  integration_organizations.rs  integration_profile.rs
rust/log-viewer/: ABOUT.md  Cargo.toml  README.md
rust/log-viewer/src/: main.rs  theme.rs
rust/log-viewer/src/api/: connections.rs  errors.rs  logs.rs  metrics.rs  mod.rs
rust/log-viewer/src/auth/: keychain.rs  mod.rs  oauth.rs
rust/log-viewer/src/source/: mod.rs
rust/log-viewer/src/theme/: fonts.rs  mod.rs
rust/log-viewer/src/view/: errors.rs  logs.rs  metrics.rs  mod.rs  settings.rs
rust/log-viewer/src/widgets/: card.rs  heatmap.rs  kpi_card.rs  mod.rs  nav_rail.rs  stack_frame.rs  status_bar.rs  time_range.rs
rust/log-viewer/tests/: auth_api.rs
rust/observability/: Cargo.toml  README.md
rust/observability/examples/: service_bootstrap.rs
rust/observability/src/: auth.rs  bootstrap.rs  client.rs  gen_ai.rs  lib.rs  metrics.rs  otel.rs  pii.rs  reqwest_mw.rs  scope.rs  stack.rs  tower.rs  transport.rs  types.rs
rust/observability/src/otel/: auth_client.rs
rust/observability/tests/: logs_signal.rs  self_emit_panic_safety.rs
