[project]
name = "smooai-observability"
version = "0.1.0"
description = "SmooAI Observability SDK — error capture + OTel"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smooai_observability"]
