[project]
name = "smooai-observability"
version = "0.1.0"
description = "SmooAI Observability SDK — error capture, PII scrubbing, batched webhook transport, OTLP traces + metrics, and GenAI semantic conventions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "SmooAI" }]
keywords = ["observability", "opentelemetry", "telemetry", "error-tracking", "genai", "smooai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "httpx>=0.27",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[project.urls]
Homepage = "https://github.com/SmooAI/observability"
Repository = "https://github.com/SmooAI/observability"
Issues = "https://github.com/SmooAI/observability/issues"

[project.optional-dependencies]
# OTLP/HTTP export of traces + metrics (setup_otel_sdk). Optional so the
# error-capture + webhook-transport core stays dependency-light.
otlp = [
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]
# FastAPI request-context + error-capture middleware.
fastapi = [
    "starlette>=0.37",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smooai_observability"]

[dependency-groups]
dev = [
    "poethepoet>=0.29.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.6,<0.12",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "starlette>=0.37",
]

[tool.poe.tasks.install-dev]
cmd = "uv sync --group dev"

[tool.poe.tasks.format]
cmd = "ruff format"

[tool.poe.tasks.lint]
cmd = "ruff check"

[tool.poe.tasks."lint:fix"]
cmd = "ruff check --fix"

[tool.poe.tasks.test]
cmd = "uv run pytest"

[tool.poe.tasks.build]
cmd = "uv build --wheel --sdist"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
