[package]
name = "smooai-api-prime"
version = "0.1.0"
edition = "2021"
description = "SmooAI api-prime — axum read API (data plane) + control-plane controller, replacing the API Gateway/Lambda hot-path. See ADR-017."
license = "MIT"
repository = "https://github.com/SmooAI/observability"
homepage = "https://github.com/SmooAI/observability"
authors = ["SmooAI <brent@smoo.ai>"]
readme = "README.md"

# Data-plane binary (HPA-scaled, stateless read API).
[[bin]]
name = "api-prime"
path = "src/bin/api-prime.rs"

# Control-plane binary (single replica, owns route table state in Valkey).
# Wave 3 fills in the reconcile loop, admin API, internal API, Lambda
# health probing, and OpenAPI generation. See ADR-017.
[[bin]]
name = "api-prime-controller"
path = "src/bin/api-prime-controller.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
] }

# Cache
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "aio", "script"] }

# Auth (JWT + JWKS)
jsonwebtoken = "9"

# Outbound HTTP (JWKS refresh + Supabase Auth REST)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# AWS SDK (data-plane proxy mode — direct Lambda invoke, bypassing API Gateway).
# Controller also uses aws-sdk-s3 to read SST stack outputs JSON.
aws-config = { version = "1", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"] }
aws-sdk-lambda = { version = "1", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"] }

# In-process LRU cache (L1, best-effort, per-pod).
moka = { version = "0.12", features = ["future"] }

# Concurrent map (route table cache, tag → keys index).
dashmap = "6"

# HMAC + SHA-2 for edge attestation signing + controller cache-invalidation
# signature verification.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
subtle = "2"

# Static perfect hash map for implement-mode handler dispatch.
phf = { version = "0.11", features = ["macros"] }

# Async helpers
async-trait = "0.1"
futures = "0.3"

# URL encoding (admin route ids)
urlencoding = "2"

# Path matching (URL templates → :param extraction).
regex = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
wiremock = "0.6"
