[package]
name = "smooai-hot-path"
version = "0.1.0"
edition = "2021"
description = "SmooAI hot-path read API — axum + sqlx + redis service serving high-traffic sidebar endpoints from EKS (replaces cold-start-prone Lambdas)"
license = "MIT"
repository = "https://github.com/SmooAI/observability"
homepage = "https://github.com/SmooAI/observability"
authors = ["SmooAI <brent@smoo.ai>"]
readme = "README.md"

[[bin]]
name = "smooai-hot-path"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
] }

# Cache
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "aio"] }

# Auth (JWT + JWKS)
jsonwebtoken = "9"

# Outbound HTTP (JWKS refresh + Supabase Auth REST)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
