[package]
name = "smooai-observability-viewer"
version = "0.1.0"
edition = "2021"
description = "SmooAI Observability Studio — native desktop client for SmooAI logs, errors, metrics, traces, and gen-AI telemetry (local + remote)"
license = "MIT"
repository = "https://github.com/SmooAI/observability"
homepage = "https://github.com/SmooAI/observability"
keywords = ["observability", "log-viewer", "smooai", "egui", "gui"]
categories = ["development-tools::debugging", "gui", "visualization"]
readme = "ABOUT.md"
authors = ["SmooAI <brent@smoo.ai>"]

[[bin]]
name = "smooobs"
path = "src/main.rs"

[dependencies]
# Local ingest pipeline (Phase 1: preserved verbatim from logger/log-viewer)
anyhow = "1"
walkdir = "2.5"
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
eframe = { version = "0.28", features = ["persistence"] }
egui = "0.28"
egui_extras = "0.28"
image = { version = "0.25", default-features = false, features = ["png"] }
duckdb = { version = "1.4", features = ["bundled"] }

# Remote API + auth (Phases 2+; declared now so the scaffold compiles cleanly)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"

[dependencies.simd-json]
version = "0.13"
optional = true

[features]
default = []
simd = ["simd-json"]

