[package]
name = "smooai-observability"
version = "0.1.0"
edition = "2021"
description = "SmooAI Observability SDK for Rust — error capture, PII scrubbing, batched webhook transport, OTLP traces + metrics, GenAI semconv, and M2M auth. Lets downstream Rust services (api-prime, voice, temporal-worker) self-emit telemetry to api.smoo.ai."
repository = "https://github.com/SmooAI/observability"
license = "MIT"
keywords = ["observability", "opentelemetry", "telemetry", "tracing", "smooai"]
categories = ["development-tools::debugging", "api-bindings"]
readme = "README.md"

[dependencies]
# `smooai-fetch` wraps reqwest with timeouts + retries + circuit-breaking. ALL of
# this SDK's outbound HTTP goes through it: the M2M token exchange (`auth.rs`), the
# batched webhook POST (`transport.rs`), AND the OTLP trace + metric export
# (`otel/auth_client.rs`, via a smooai-fetch-backed `opentelemetry_http::HttpClient`
# adapter) — so every call inherits the resilience policy every other SmooAI client
# uses (SMOODEV-2026, SMOODEV-2029). smooai-fetch pulls reqwest transitively.
smooai-fetch = "3"
# reqwest is now needed ONLY by the optional `reqwest-middleware` integration —
# the client-span middleware in `reqwest_mw.rs` IS the reqwest integration for
# downstream reqwest users. No code path in the default build references reqwest
# directly (the OTLP exporter transport moved to smooai-fetch in SMOODEV-2029), so
# the dep is feature-gated to keep the default build from pulling reqwest as a
# DIRECT dependency. (It still arrives transitively through smooai-fetch.)
reqwest = { version = "0.13", features = ["json", "form", "rustls"], default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
backtrace = "0.3"
regex = "1"
once_cell = "1"
async-trait = "0.1"
http = "1"
bytes = "1"
thiserror = "2"

# OpenTelemetry — traces + metrics over OTLP/HTTP with JSON payloads so the
# wire format matches the api.smoo.ai ingest the TS SDK already speaks.
# The exporter's HTTP transport is supplied explicitly via `.with_http_client(...)`
# (a smooai-fetch-backed `opentelemetry_http::HttpClient`), so we do NOT enable any
# of opentelemetry-otlp's built-in HTTP clients (`reqwest-client` etc.) — the
# explicit client always wins and the default-client code is never compiled in.
# `experimental-http-retry` is deliberately OFF: smooai-fetch owns transport retry,
# so leaving the exporter's retry feature off prevents double-retry (SMOODEV-2029).
# opentelemetry-http is pulled with no features — we only need the `HttpClient`
# trait to implement it ourselves (the `reqwest` feature, which impls it for
# reqwest::Client, is no longer used).
opentelemetry = { version = "0.32", features = ["trace", "metrics"] }
# The two `experimental_*_with_async_runtime` features expose the async-runtime
# batch span processor + periodic metric reader used in `otel.rs`. They are
# REQUIRED for correctness, not a nicety: the default (thread-based) processors
# drive the OTLP export with `futures_executor::block_on` on a bare OS thread,
# where our reqwest-backed exporter has no Tokio reactor and PANICS — which under
# the workspace `panic = "abort"` profile aborts the host process (SMOODEV-2045).
# Both features pull in `experimental_async_runtime`; `rt-tokio` supplies the
# `runtime::Tokio` impl that `tokio::spawn`s the export onto the live runtime.
opentelemetry_sdk = { version = "0.32", features = [
    "trace",
    "metrics",
    "rt-tokio",
    "experimental_trace_batch_span_processor_with_async_runtime",
    "experimental_metrics_periodicreader_with_async_runtime",
] }
opentelemetry-otlp = { version = "0.32", features = ["trace", "metrics", "http-json"], default-features = false }
opentelemetry-http = { version = "0.32", default-features = false }
opentelemetry-semantic-conventions = "0.32"

# --- Optional HTTP framework instrumentation (feature-gated, default off) -----
# `tower` feature: a tower::Layer wrapping any http Service (incl. Axum routers)
# that opens a server span per request on the global tracer.
tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }
# `reqwest-middleware` feature: a client-span middleware for outbound calls.
# 0.5 supports reqwest 0.13 (this crate's pin).
reqwest-middleware = { version = "0.5", optional = true }

[features]
default = []
# OTel server-span layer for Tower/Axum services.
tower = ["dep:tower-layer", "dep:tower-service", "dep:pin-project-lite"]
# OTel client-span middleware for reqwest. Pulls reqwest as a DIRECT dep (the
# only thing in this crate that needs it directly — the OTLP transport is on
# smooai-fetch as of SMOODEV-2029).
reqwest-middleware = ["dep:reqwest-middleware", "dep:reqwest"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }
wiremock = "0.6"
