[package]
name = "observability-studio-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SmooAI Observability API client — M2M auth + typed routes"

[dependencies]
chrono.workspace = true
keyring.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
